# Deep-Learning-CSCI-GA-2572-Final-Project

./: .gitignore  configs.py  dataset.py  engine.py  evaluator.py  loss.py  main.py  metrics.txt  models.py  optimizer.py  pyproject.toml  train.py  utils.py
config/: areg_adv_jepa_config.yaml  areg_adv_jepa_config_higher_delta.yaml  areg_adv_jepa_config_lower_delta.yaml  areg_jepa_2d_config.yaml  areg_jepa_2d_config_covariance_0.yaml  areg_jepa_2d_config_higher_embed_dim.yaml  areg_jepa_2d_config_lower_embed_dim.yaml  areg_jepa_2d_config_v3.yaml  areg_jepa_2d_v2.yaml  areg_jepa_2d_v2_config.yaml  areg_jepa_flex_2d_config.yaml  areg_jepa_flex_2d_config_effnet.yaml  areg_jepa_flex_2d_config_mobxxs.yaml  jepa_config.yaml
notebooks/: eda.ipynb  scratch.ipynb  wandb_cleanup.ipynb  wandb_stuff.ipynb
