[tool.poetry]
name = "dl-final-proj"
version = "0.1.0"
description = ""
authors = ["Kevin Mathew T"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.5.1"
omegaconf = "^2.3.0"
matplotlib = "^3.9.2"
numpy = "2.0"
tqdm = "^4.67.1"
accelerate = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
